Fix: Headings line-height; Site branding letter-spacing and word-spacing.

--- a/sass/bootstrap-4/_variables.scss
+++ b/sass/bootstrap-4/_variables.scss
@@ -314,7 +314,7 @@ $h6-font-size:                $font-size-base !default;
 $headings-margin-bottom:      $spacer / 2 !default;
 $headings-font-family:        $font-family-serif !default;
 $headings-font-weight:        400 !default;
-$headings-line-height:        1.2 !default;
+$headings-line-height:        1.25 !default;
 $headings-color:              $black !default;
 
 $display1-size:               6rem !default;
