--- a/sass/content/_single.scss
+++ b/sass/content/_single.scss
@@ -61,9 +61,11 @@
 
     .site-header .container,
     .site-header .container-fluid {
-        padding: 0 15px;
+        padding-left: 15px;
+        padding-right: 15px;
         @include media-breakpoint-up(lg) {
-            padding: 0;
+            padding-left: 0;
+            padding-right: 0;
         }
     }
 
