--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,6 +16,9 @@
 		margin-bottom: auto;
 		padding: 0;
 		font-size: 1.5rem;
+		letter-spacing: normal;
+		word-spacing: normal;
+
 		@include media-breakpoint-up(lg) {
 			font-size: 2rem;
 		}
